fix the spacing

--- a/app/assets/stylesheets/components/_howto.scss
+++ b/app/assets/stylesheets/components/_howto.scss
@@ -6,6 +6,7 @@
 .cards {
   display: flex;
   justify-content: space-between;
+  justify-content: space-around;
 }
 
 .how-to-card {
